syntax = "proto3";

package grpcd;

// DominionIdentity represents a dominion
message DominionIdentity {
	// Address is the network address of the dominion
	Address Address = 1;
	// Version is the version of code being run by the dominion
	string Version = 2;
}


// DomainIdentity represents a domain
message DomainIdentity {
	// Address is the network address of the domain
	Address Address = 1;
	// Version is the version of code being run by the domain
	string Version = 2;
	// UUID is a Unique Identifier for the domain
	string UUID = 3;
	// Traits is the list of traits of the domain
	repeated string Traits = 4;
	// Services is the list of services an Identity currently offers
	map <string, ServiceIdentity> Services = 5;
}


// Service represents a service running under a domain
message ServiceIdentity {
	// Type is the type of the service
	string Type = 1;
	// Address is the network address of the service
	Address Address = 2;
}

message Address {
	// IP is the IP address which the domain was last known to communicate over
	bytes IP = 5;
	// Port is the port which the domain was last known to belong communicate over
	int32 Port = 6;
}